--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
 					<p>En el siguiente repositorio, se encuentran algunos screenshots del proyecto:</p>
 					<a target="_blank" href="https://github.com/ansegura7/Evolucion-Temperatura-Global/tree/master/screenshot">GitHub Screenshots</a>
 
-					<h3>Licencia</h3>
-					<p>Este proyecto está bajo la licencia <a target="_blank" href="https://github.com/ansegura7/Evolucion-Temperatura-Global/blob/master/LICENSE">MIT</a>.</p>
+					<h3>Links de Interés</h3>
+					<p>Video de Youtube: <a target="_blank" href="https://youtu.be/ezkcyjspbyY">https://youtu.be/ezkcyjspbyY</a>.</p>
+					<p>Tweet: <a target="_blank" href="https://twitter.com/SeguraAndres7/status/1049729210607173632">https://twitter.com/SeguraAndres7/status/1049729210607173632</a>.</p>
 				</div>
 
 			</div>
