Adding Temporary Data information

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					<h1>Readme</h1>
 
 					<h3>Datos del Proyecto – What</h3>
-					<p>Los datos que se usaron para este proyecto son propiedad de la <a target="_blank" href="https://data.giss.nasa.gov/gistemp/">NASA</a>, y están compuestos por varios dataset del tipo tabla (tables), que contiene las siguientes variables (attributes):</p>
+					<p>Los datos que se usaron para este proyecto son propiedad de la <a target="_blank" href="https://data.giss.nasa.gov/gistemp/">NASA</a>, y están compuestos por varios dataset del tipo tabla (Tables), que contiene las siguientes variables (attributes) temporales:</p>
 					<ul>
 						<li>Year: ordered, quantitative, sequencial (no existen fechas menores a 1880).</li>
 						<li>Temperuture: ordered, quantitative, divergent.</li>
@@ -174,7 +174,7 @@
 					<p>Por último, que la Viz permita identificar (<b>identify</b>) la distribución (<b>distribution</b>) de la temperatura promedio por mes para un año en específico (Gráfico 3).</p>
 
 					<h3>Marcas y Canales – How</h3>
-					<p>En los 3 gráficos de líneas, se usaron como marcas puntos conectados por líneas. Tanto los datos del eje X como los del eje Y están ordenados secuencialmente. En cada gráfico se usó la escala de colores de D3, para ayudar al usuario a diferenciar claramente las series a través del Color Hue.</p>
+					<p>En los 3 gráficos de tipo Line, se usaron como marcas líneas. Tanto los datos del eje X como los del eje Y están ordenados secuencialmente. En cada gráfico se usó la escala de colores de D3, para ayudar al usuario a diferenciar claramente las series a través del Color Hue. Los años fueron ordenados en el eje X de izquierda a derecha, para respetar el principio de expresividad de los datos.</p>
 					<p>Con respecto al gráfico de barras, se usaron como marcas líneas verticales ordenadas tanto en el eje Y (para expresar cantidad), como en el eje X (secuencialmente por mes) para mayor entendimiento de los datos.</p>
 					<p>En todos los gráficos se usó la posición vertical, para mostrar el tamaño del valor que se deseaba graficar. Además, también se usó en cada gráfico un título y un subtítulo descriptivo, para ayudar al usuario a entender la información que se está visualizando.</p>
 					<p>La visualización cuenta con múltiples filtros (por tipos de datos, cantidad de datos, año de análisis) para reducir los datos y ayudar al usuario a realizar un mejor análisis.</p>
